# validation_semantic

./: .env  .gitignore  Cargo.toml  README.md  Readme.md  build.rs  validation_semantic.pyi
.github/workflows/: build_maturin.yml  release.yml  rust.yml
src/: c_ffi.rs  common.rs  core_logic.rs  lib.rs  main.rs  python_entry.rs
src/bindings/: c_ffi.rs  mod.rs
src/bindings/flutter/: dart.rs  mod.rs
src/bindings/kotlin/: mod.rs  uniffi.rs
src/bindings/nodejs/: mod.rs  test.js  wasm_bindings.rs
src/bindings/python/: mod.rs  python_bindings.rs  test.py
src/bindings/web/: wasm_bindings.rs
src/config/: api_config.rs  mod.rs
src/core/: core_logic.rs  mod.rs
src/models/: gemini.rs  mod.rs  supported_model.rs  validation.rs
src/utils/: mod.rs  test_cases.rs
tests/: core_logic_tests.rs
tests/core/: api_config_test.rs  body_generation_tests.rs  mod.rs  parser_tests.rs  prompt_test.rs
tests/integration/: integration_async.rs  integration_sync.rs  mod.rs
tests/models/: mod.rs  supported_model_tests.rs  validation_response_tests.rs
tests/unittest/: mod.rs  unittest_sintaksis.rs
