[package]
name = "validation_semantic" # Nama package Anda
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "run_validation_tester"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
dotenv = "0.15"
once_cell = "1.19"

# Perbaikan: Tambahkan optional = true untuk pyo3
pyo3 = { version = "0.25.0", features = ["extension-module"], optional = true }

wasm-bindgen = { version = "0.2", optional = true }
# jni = { version = "0.21", optional = true } # Jika Anda akan menggunakannya, pastikan juga optional = true

[profile.release]
lto = true
opt-level = "z"

[features]
# Perbaikan: Pastikan setiap fitur ada di barisnya sendiri dan sintaksnya benar.
# Baris yang menyebabkan error pertama telah diperbaiki/dihapus asumsi
# bahwa 'python_bindings_feature' adalah yang dimaksud untuk pyo3.
default = []
wasm = ["dep:wasm-bindgen"]
python_bindings_feature = ["pyo3"] # Fitur ini sudah benar dan akan mengaktifkan dependensi pyo3