[package]
name = "validation_semantic"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "run_validation_tester"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
once_cell = "1.19"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
# reqwest dibuat opsional dan default-features = false.
# Fitur spesifik ("json", "blocking", "rustls-tls", "wasm-bindgen") akan diaktifkan HANYA melalui fitur Cargo kita.
reqwest = { version = "0.12", default-features = false, optional = true }
regex = "1"
# Dependensi opsional lainnya
wasm-bindgen = { version = "0.2.92", optional = true }
wasm-bindgen-futures = { version = "0.4.42", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
pyo3 = { version = "0.25.0", features = ["extension-module"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[profile.release]
lto = true
opt-level = "z"

[features]
console_error_panic_hook_feature = []
default = ["native_ffi_setup"] # Default build untuk native FFI

# Fitur untuk mengaktifkan reqwest dengan konfigurasi NATIVE SINKRON
reqwest_native_sync = [
    "dep:reqwest",
    "reqwest/json",
    "reqwest/blocking",
    "reqwest/rustls-tls"
]

# Fitur untuk mengaktifkan reqwest dengan konfigurasi WASM ASINKRON
reqwest_wasm = [
    "dep:reqwest",
    "reqwest/json",
    #"reqwest/wasm-bindgen"
]

# Fitur untuk build native (FFI C, dan PyO3 jika sinkron)
native_ffi_setup = [
    "reqwest_native_sync", # Menggunakan konfigurasi reqwest native sinkron
    "dep:pyo3",            # Jika PyO3 digunakan dalam build default ini
    "dep:tokio"            # Jika FFI C/PyO3 Anda MEMANGGIL fungsi async Rust dengan block_on
]

# Fitur untuk build WebAssembly (Wasm)
wasm_bindings_setup = [
    "reqwest_wasm",        # Menggunakan konfigurasi reqwest Wasm
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:serde-wasm-bindgen",
    "dep:console_error_panic_hook"
]

# Fitur spesifik untuk Python jika berbeda atau untuk kejelasan
# Jika python_bindings_feature sama dengan native_ffi_setup:
python_bindings_feature = ["native_ffi_setup"]
# Atau jika memiliki kebutuhan berbeda, definisikan secara terpisah:
# python_bindings_feature = [
#     "reqwest_native_sync", # atau "reqwest_NATIVE_ASYNC_via_tokio" jika PyO3 Anda async
#     "dep:pyo3",
#     "dep:tokio" # Jika menggunakan block_on atau pyo3-asyncio dengan tokio
# ]